# dreamstore

./: .env  .gitignore  README.md  build_files.sh  db.sqlite3  package.json  pyproject.toml  requirements.txt  vercel.json
.vercel/: project.json
.vercel/cache/wsgi/: pyproject.toml  vercel.json
.vercel/cache/wsgi/store/: models.py  serializers.py  urls.py
.vercel/cache/wsgi/store/migrations/: 0003_alter_product_name_alter_product_price_and_more.py
kernel/: settings.py  urls.py  wsgi.py
store/: models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_rename_store_product_alter_product_options.py
